# caddy-rs

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: ci.yml
caddy_test/: Cargo.toml
caddy_test/src/: main.rs
caddy_types/: Cargo.toml
caddy_types/json/: root.json
caddy_types/json/caddy.apps/: http.json  pki.json  tls.json
caddy_types/json/caddy.config_loaders/: http.json
caddy_types/json/caddy.listeners/: tls.json
caddy_types/json/caddy.logging.encoders/: console.json  filter.json  json.json  logfmt.json  single_field.json
caddy_types/json/caddy.logging.writers/: discard.json  file.json  net.json  stderr.json  stdout.json
caddy_types/json/caddy.storage/: file_system.json
caddy_types/json/http.authentication.hashes/: bcrypt.json  scrypt.json
caddy_types/json/http.authentication.providers/: http_basic.json
caddy_types/json/http.encoders/: gzip.json  zstd.json
caddy_types/json/http.handlers/: acme_server.json  authentication.json  encode.json  error.json  file_server.json  headers.json  map.json  metrics.json  push.json  request_body.json  reverse_proxy.json  rewrite.json  static_response.json  subroute.json  templates.json  vars.json
caddy_types/json/http.matchers/: expression.json  file.json  header.json  header_regexp.json  host.json  method.json  not.json  path.json  path_regexp.json  protocol.json  query.json  remote_ip.json  vars.json  vars_regexp.json
caddy_types/scripts/: fetch_namespace.py
caddy_types/src/: lib.rs
caddy_types_codegen/: Cargo.toml
caddy_types_codegen/src/: lib.rs
src/: lib.rs
(+26 files in other folders)
