[package]
name = "caddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caddy_types = { path = "./caddy_types" }
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
thiserror = "1.0.30"

[workspace]
members = [
	"caddy_types/",
	"caddy_types_codegen/",
	"caddy_test/",
]
