[package]
name = "caddy_types_codegen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.3"
proc-macro2 = "1.0.30"
quote = "1.0.10"
#reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
#serde_path_to_error = "0.1.5"
syn = { version = "1.0.80", features = ["parsing"] }
